# py-guards

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: force-publish.yml  force-pypi-publish.yml  release-please.yml
1.1.1/changelog/: index.html
1.1.2/changelog/: index.html
1.1.3/api/guards/: singleton.html  unwrap.html
1.1.3/changelog/: index.html
1.1.4/: 404.html  index.html
1.1.4/api/guards/: index.html
1.1.4/changelog/: index.html
1.2.0/: 404.html
1.2.0/changelog/: index.html
1.2.1/: index.html
1.2.1/changelog/: index.html
1.2.2/: 404.html  index.html
1.2.2/changelog/: index.html
1.3.0/: index.html
1.3.0/api/xsentinels/: sentinel.html
1.3.0/changelog/: index.html
1.3.1/: 404.html
1.3.1/changelog/: index.html
docs/: index.md
guards/: __init__.py  default.py  null.py  singleton.py  unwrap.py
latest/api/guards/: default.html  null.html
latest/api/xsentinels/: singleton.html
latest/changelog/: index.html
tests/: test_default_type.py  test_null_type.py  test_singleton.py  test_unwrap.py
xsentinels/: __init__.py  default.py  null.py  sentinel.py  singleton.py  unwrap.py
