[tool.poetry]
name = "xsentinels"
description = "Sentinels for Defaults, Null and for creating sentinels/singletons."
version = "1.3.0"
authors = ["Josh Orr <josh@orr.blue>"]
readme = "README.md"
packages = [{include = "xsentinels"}]
repository = "https://github.com/xyngular/py-xsentinels"
keywords = ["singleton", "type", "guards", "sentinels", "sentinel", "default", "null"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: The Unlicense (Unlicense)"
]

[tool.poetry.dependencies]
python = "^3.10"
typing-inspect = "^0"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0"
tomlkit = "^0"
mike = "^2.0.0"
pytest-pycodestyle = "^2.4.1"
pytest = "^8.0.0"
mkdocs-material = "^9.0.0"
mkdocs = "^1.4.0"
mypy = "^1.14.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose --pycodestyle"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
